--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><title>index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="groc-relative-root" content=""><meta name="groc-document-path" content="index"><meta name="groc-project-path" content="README.md"><link rel="stylesheet" type="text/css" media="all" href="assets/style.css"><script type="text/javascript" src="assets/behavior.js"></script><body><div id="meta"><div class="file-path">README.md</div></div><div id="document"><div class="segment"><div class="comments "><div class="wrapper"><h1 id="monadseither">monads.either</h1>
+<!DOCTYPE html><html lang="en"><head><title>index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="groc-relative-root" content=""><meta name="groc-document-path" content="index"><meta name="groc-project-path" content="README.md"><link rel="stylesheet" type="text/css" media="all" href="assets/style.css"><link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|PT+Sans"><script type="text/javascript" src="assets/behavior.js"></script><body><div id="meta"><div class="file-path">README.md</div></div><div id="document"><div class="segment"><div class="comments "><div class="wrapper"><h1 id="monads-either">Monads: Either</h1>
 
 <p><a href="https://travis-ci.org/folktale/monads.either"><img src="https://secure.travis-ci.org/folktale/monads.either.png?branch=master" alt="Build Status" title="" /></a>
 <a href="http://badge.fury.io/js/monads.either"><img src="https://badge.fury.io/js/monads.either.png" alt="NPM version" title="" /></a>
@@ -50,7 +50,7 @@ environment, you can use <a href="http://browserify.org/">Browserify</a></p>
 
 <h3 id="using-with-commonjs">Using with CommonJS</h3>
 
-<p>If you're not using NPM, <a href="https://github.com/folktale/monads.either/releases/download/v0.1.0/monads.either-0.1.0.tar.gz">Download the latest release</a>, and require
+<p>If you're not using NPM, <a href="https://github.com/folktale/monads.either/releases/download/v0.2.0/monads.either-0.2.0.tar.gz">Download the latest release</a>, and require
 the <code>monads.either.umd.js</code> file:</p>
 
 <pre><code class="js">var Either = require('monads.either')
@@ -58,7 +58,7 @@ the <code>monads.either.umd.js</code> file:</p>
 
 <h3 id="using-with-amd">Using with AMD</h3>
 
-<p><a href="https://github.com/folktale/monads.either/releases/download/v0.1.0/monads.either-0.1.0.tar.gz">Download the latest release</a>, and require the <code>monads.either.umd.js</code>
+<p><a href="https://github.com/folktale/monads.either/releases/download/v0.2.0/monads.either-0.2.0.tar.gz">Download the latest release</a>, and require the <code>monads.either.umd.js</code>
 file:</p>
 
 <pre><code class="js">require(['monads.either'], function(Either) {
@@ -68,8 +68,8 @@ file:</p>
 
 <h3 id="using-without-modules">Using without modules</h3>
 
-<p><a href="https://github.com/folktale/monads.either/releases/download/v0.1.0/monads.either-0.1.0.tar.gz">Download the latest release</a>, and load the <code>monads.either.umd.js</code>
-file. The properties are exposed in the global <code>Either</code> object:</p>
+<p><a href="https://github.com/folktale/monads.either/releases/download/v0.2.0/monads.either-0.2.0.tar.gz">Download the latest release</a>, and load the <code>monads.either.umd.js</code>
+file. The properties are exposed in the global <code>folktale.monads.Either</code> object:</p>
 
 <pre><code class="html">&lt;script src="/path/to/monads.either.umd.js"&gt;&lt;/script&gt;
 </code></pre>
@@ -92,8 +92,8 @@ any JavaScript environment.</p>
 
 <p>You can <a href="http://folktale.github.io/monads.either">read the documentation online</a> or build it yourself:</p>
 
-<pre><code>$ git clone git://github.com/folktale/monads.maybe.git
-$ cd monads.maybe
+<pre><code>$ git clone git://github.com/folktale/monads.either.git
+$ cd monads.either
 $ npm install
 $ make documentation
 </code></pre>
