--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><title>src/index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="groc-relative-root" content="../"><meta name="groc-document-path" content="src/index"><meta name="groc-project-path" content="src/index.ls"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="meta"><div class="file-path">src/index.ls</div></div><div id="document"><div class="segment"><div class="comments "><div class="wrapper"><h1 id="monadseither">monads.either</h1>
+<!DOCTYPE html><html lang="en"><head><title>src/index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="groc-relative-root" content="../"><meta name="groc-document-path" content="src/index"><meta name="groc-project-path" content="src/index.ls"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|PT+Sans"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="meta"><div class="file-path">src/index.ls</div></div><div id="document"><div class="segment"><div class="comments "><div class="wrapper"><h1 id="monad-eithera-b">Monad: Either(a, b)</h1>
 
 <p>The <code>Either(a, b)</code> monad represents the logical disjunction between
 <code>a</code> and <code>b</code>. In other words, <code>Either</code> may contain either a value of
@@ -30,12 +30,16 @@ hold one of the cases at any given time. The projections are, none the
 less, biased for the <code>Right</code> case, thus a common use case for this
 monad is to hold the results of computations that may fail, when you
 want to store additional information on the failure (instead of
-throwing an exception).</p></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><p>Furthermore, the values of <code>Either(a, b)</code> can be combined and
+throwing an exception).</p>
+
+<p>Furthermore, the values of <code>Either(a, b)</code> can be combined and
 manipulated by using the expressive monadic operations. This allows
 safely sequencing operations that may fail, and safely composing
 values that you don't know whether they're present or not, failing
-early (returning a <code>Left a</code>) if any of the operations fail.</p></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><p>While this class can certainly model input validations, the
-[Validation][] monad lends itself better to that use case, since it
+early (returning a <code>Left a</code>) if any of the operations fail.</p>
+
+<p>While this class can certainly model input validations, the
+<a href="https://github.com/folktale/monads.validation">Validation</a> monad lends itself better to that use case, since it
 can naturally aggregate failures — monads shortcut on the first
 failure.</p></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h2 id="class-eithera-b">Class: Either(a, b)</h2>
 
@@ -44,7 +48,7 @@ failure.</p></div></div></div><div class="segment"><div class="comments "><div c
 <ul>
 <li>type: Either(a, b) &lt;: Applicative, Functor, Chain, Show, Eq</li>
 </ul></div></div><div class="code"><div class="wrapper"><span class="k">class</span> <span class="nx">Either</span>
-  <span class="nf">-&gt;</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-constructors">Section: Constructors</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-left">Function: Left</h4>
+  <span class="nf">-&gt;</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="constructors">Constructors</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-left">Function: Left</h4>
 
 <p>Constructs a new <code>Either(a, b)</code> monad holding a <code>Left</code> value. This
 usually represents a failure due to the right-bias of this monad.</p>
@@ -66,13 +70,13 @@ monad.</p>
 case otherwise.
 + type: a -> Either(a, a)</p></div></div><div class="code"><div class="wrapper">  <span class="nv">from-nullable: </span><span class="nf">(a) -&gt;</span>
     <span class="o">|</span> <span class="nx">a</span><span class="o">?</span> <span class="o">=&gt;</span> <span class="k">new</span> <span class="nx">Right</span><span class="p">(</span><span class="nx">a</span><span class="p">)</span>
-    <span class="o">|</span> <span class="nx">_</span>  <span class="o">=&gt;</span> <span class="k">new</span> <span class="nx">Left</span><span class="p">(</span><span class="nx">a</span><span class="p">)</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-predicates">Section: Predicates</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="field-is-left">Field: is-left</h4>
+    <span class="o">|</span> <span class="nx">_</span>  <span class="o">=&gt;</span> <span class="k">new</span> <span class="nx">Left</span><span class="p">(</span><span class="nx">a</span><span class="p">)</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="predicates">Predicates</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="field-is-left">Field: is-left</h4>
 
 <p>True if the <code>Either(a, b)</code> contains a <code>Left</code> value.
 + type: Boolean</p></div></div><div class="code"><div class="wrapper">  <span class="o">is-</span><span class="nv">left: </span><span class="kc">false</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="field-is-right">Field: is-right</h4>
 
 <p>True if the <code>Either(a, b)</code> contains a <code>Right</code> value.
-+ type: Boolean</p></div></div><div class="code"><div class="wrapper">  <span class="o">is-</span><span class="nv">right: </span><span class="kc">false</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-applicative">Section: Applicative</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-of">Function: of</h4>
++ type: Boolean</p></div></div><div class="code"><div class="wrapper">  <span class="o">is-</span><span class="nv">right: </span><span class="kc">false</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="applicative">Applicative</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-of">Function: of</h4>
 
 <p>Creates a new <code>Either(a, b)</code> instance holding the <code>Right</code> value
 <code>b</code>.</p>
@@ -88,31 +92,31 @@ case otherwise.
 monad to another applicative type.
 The <code>Either(a, b)</code> monad should contain a function value, otherwise
 a <code>TypeError</code> is thrown.
-+ type: (@Either(a, b -> c), f:Applicative) -> f(b) -> f(c)</p></div></div><div class="code"><div class="wrapper">  <span class="nv">ap: </span><span class="nf">(_) -&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-functor">Section: Functor</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-map">Function: map</h4>
++ type: (@Either(a, b -> c), f:Applicative) => f(b) -> f(c)</p></div></div><div class="code"><div class="wrapper">  <span class="nv">ap: </span><span class="nf">(_) -&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="functor">Functor</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-map">Function: map</h4>
 
 <p>Transforms the <code>Right</code> value of the <code>Either(a, b)</code> monad using a
 regular unary function.</p>
 
 <ul>
 <li>type: (@Either(a, b)) => (b -> c) -> Either(a, c)</li>
-</ul></div></div><div class="code"><div class="wrapper">  <span class="nv">map: </span><span class="nf">(_) -&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-chain">Section: Chain</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-chain">Function: chain</h4>
+</ul></div></div><div class="code"><div class="wrapper">  <span class="nv">map: </span><span class="nf">(_) -&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="chain">Chain</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-chain">Function: chain</h4>
 
 <p>Transforms the <code>Right</code> value of the <code>Either(a, b)</code> monad using an
 unary function to a monad of the same type.</p>
 
 <ul>
 <li>type: (@Either(a, b)) => (b -> Either(a, c)) -> Either(a, c)</li>
-</ul></div></div><div class="code"><div class="wrapper">  <span class="nv">chain: </span><span class="nf">(_) -&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-show">Section: Show</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-to-string">Function: to-string</h4>
+</ul></div></div><div class="code"><div class="wrapper">  <span class="nv">chain: </span><span class="nf">(_) -&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="show">Show</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-to-string">Function: to-string</h4>
 
 <p>Returns a textual representation of the <code>Either(a, c)</code> monad.</p>
 
 <ul>
 <li>type: (@Either(a, b)) => Unit -> String</li>
-</ul></div></div><div class="code"><div class="wrapper">  <span class="k">to</span><span class="o">-</span><span class="nv">string: </span><span class="nf">-&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-eq">Section: Eq</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-is-equal">Function: is-equal</h4>
+</ul></div></div><div class="code"><div class="wrapper">  <span class="k">to</span><span class="o">-</span><span class="nv">string: </span><span class="nf">-&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="eq">Eq</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-is-equal">Function: is-equal</h4>
 
 <p>Tests if an <code>Either(a, b)</code> monad is equal to another <code>Either(a, b)</code>
 monad.
-+ type: (@Either(a, b)) => Either(a, b) -> Boolean</p></div></div><div class="code"><div class="wrapper">  <span class="o">is-</span><span class="nv">equal: </span><span class="nf">(_) -&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-extracting-and-recovering">Section: Extracting and Recovering</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-get">Function: get</h4>
++ type: (@Either(a, b)) => Either(a, b) -> Boolean</p></div></div><div class="code"><div class="wrapper">  <span class="o">is-</span><span class="nv">equal: </span><span class="nf">(_) -&gt;</span> <span class="p">...</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="extracting-and-recovering">Extracting and Recovering</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-get">Function: get</h4>
 
 <p>Extracts the <code>Right</code> value out of the <code>Either(a, b)</code> monad, if it
 exists. Otherwise throws a <code>TypeError</code>.</p>
@@ -134,7 +138,7 @@ nothing if the monad contains a <code>Right</code> value.
 
 <p>Returns the value of whichever side of the disjunction that is
 present.
-+ type: (@Either(a, a)) => Unit -> a</p></div></div><div class="code"><div class="wrapper">  <span class="nv">merge: </span><span class="nf">-&gt;</span> <span class="nx">@value</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="section-folds-and-extended-transformations">Section: Folds and Extended Transformations</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-fold">Function: fold</h4>
++ type: (@Either(a, a)) => Unit -> a</p></div></div><div class="code"><div class="wrapper">  <span class="nv">merge: </span><span class="nf">-&gt;</span> <span class="nx">@value</span></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h3 id="folds-and-extended-transformations">Folds and Extended Transformations</h3></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h4 id="function-fold">Function: fold</h4>
 
 <p>Catamorphism. Takes two functions, applies the leftmost one to the
 <code>Left</code> value and the rightmost one to the <code>Right</code> value, depending
