--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@ values that you don't know whether they're present or not, failing
 early (returning a <code>Left a</code>) if any of the operations fail.</p>
 
 <p>While this class can certainly model input validations, the
-<a href="https://github.com/folktale/monads.validation">Validation</a> monad lends itself better to that use case, since it
+<a href="https://github.com/folktale/data.validation">Validation</a> monad lends itself better to that use case, since it
 can naturally aggregate failures — monads shortcut on the first
 failure.</p></div></div></div><div class="segment"><div class="comments "><div class="wrapper"><h2 id="class-eithera-b">Class: Either(a, b)</h2>
 
