--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="en"><head><title>index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="groc-relative-root" content=""><meta name="groc-document-path" content="index"><meta name="groc-project-path" content="README.md"><link rel="stylesheet" type="text/css" media="all" href="assets/style.css"><link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|PT+Sans"><script type="text/javascript" src="assets/behavior.js"></script><body><div id="meta"><div class="file-path">README.md</div></div><div id="document"><div class="segment"><div class="comments "><div class="wrapper"><h1 id="monads-either">Monads: Either</h1>
+<!DOCTYPE html><html lang="en"><head><title>index</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="groc-relative-root" content=""><meta name="groc-document-path" content="index"><meta name="groc-project-path" content="README.md"><link rel="stylesheet" type="text/css" media="all" href="assets/style.css"><link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo|PT+Sans"><script type="text/javascript" src="assets/behavior.js"></script><body><div id="meta"><div class="file-path">README.md</div></div><div id="document"><div class="segment"><div class="comments "><div class="wrapper"><h1 id="the-either-monad">The Either Monad</h1>
 
-<p><a href="https://travis-ci.org/folktale/monads.either"><img src="https://secure.travis-ci.org/folktale/monads.either.png?branch=master" alt="Build Status" title="" /></a>
-<a href="http://badge.fury.io/js/monads.either"><img src="https://badge.fury.io/js/monads.either.png" alt="NPM version" title="" /></a>
-<a href="https://david-dm.org/folktale/monads.either"><img src="https://david-dm.org/folktale/monads.either.png" alt="Dependencies Status" title="" /></a>
+<p><a href="https://travis-ci.org/folktale/data.either"><img src="https://secure.travis-ci.org/folktale/data.either.png?branch=master" alt="Build Status" title="" /></a>
+<a href="http://badge.fury.io/js/data.either"><img src="https://badge.fury.io/js/data.either.png" alt="NPM version" title="" /></a>
+<a href="https://david-dm.org/folktale/data.either"><img src="https://david-dm.org/folktale/data.either.png" alt="Dependencies Status" title="" /></a>
 <a href="http://github.com/hughsk/stability-badges"><img src="http://hughsk.github.io/stability-badges/dist/experimental.svg" alt="experimental" title="" /></a></p>
 
 <p>The <code>Either(a, b)</code> monad represents the logical disjunction between <code>a</code> and
@@ -22,7 +22,7 @@ provided for the common interface in <a href="https://github.com/fantasyland/fan
 
 <h2 id="example">Example</h2>
 
-<pre><code class="js">var Either = require('monads.either')
+<pre><code class="js">var Either = require('data.either')
 
 // + type: String -&gt; Either(Error, String)
 function read(path) {
@@ -45,33 +45,33 @@ intro.map(function(a) {
 <p>The easiest way is to grab it from NPM. If you're running in a Browser
 environment, you can use <a href="http://browserify.org/">Browserify</a></p>
 
-<pre><code>$ npm install monads.either
+<pre><code>$ npm install data.either
 </code></pre>
 
 <h3 id="using-with-commonjs">Using with CommonJS</h3>
 
-<p>If you're not using NPM, <a href="https://github.com/folktale/monads.either/releases/download/v0.2.0/monads.either-0.2.0.tar.gz">Download the latest release</a>, and require
-the <code>monads.either.umd.js</code> file:</p>
+<p>If you're not using NPM, <a href="https://github.com/folktale/data.either/releases/download/v1.0.0/data.either-1.0.0.tar.gz">Download the latest release</a>, and require
+the <code>data.either.umd.js</code> file:</p>
 
-<pre><code class="js">var Either = require('monads.either')
+<pre><code class="js">var Either = require('data.either')
 </code></pre>
 
 <h3 id="using-with-amd">Using with AMD</h3>
 
-<p><a href="https://github.com/folktale/monads.either/releases/download/v0.2.0/monads.either-0.2.0.tar.gz">Download the latest release</a>, and require the <code>monads.either.umd.js</code>
+<p><a href="https://github.com/folktale/data.either/releases/download/v1.0.0/data.either-1.0.0.tar.gz">Download the latest release</a>, and require the <code>data.either.umd.js</code>
 file:</p>
 
-<pre><code class="js">require(['monads.either'], function(Either) {
+<pre><code class="js">require(['data.either'], function(Either) {
   ( ... )
 })
 </code></pre>
 
 <h3 id="using-without-modules">Using without modules</h3>
 
-<p><a href="https://github.com/folktale/monads.either/releases/download/v0.2.0/monads.either-0.2.0.tar.gz">Download the latest release</a>, and load the <code>monads.either.umd.js</code>
-file. The properties are exposed in the global <code>folktale.monads.Either</code> object:</p>
+<p><a href="https://github.com/folktale/data.either/releases/download/v1.0.0/data.either-1.0.0.tar.gz">Download the latest release</a>, and load the <code>data.either.umd.js</code>
+file. The properties are exposed in the global <code>folktale.data.Either</code> object:</p>
 
-<pre><code class="html">&lt;script src="/path/to/monads.either.umd.js"&gt;&lt;/script&gt;
+<pre><code class="html">&lt;script src="/path/to/data.either.umd.js"&gt;&lt;/script&gt;
 </code></pre>
 
 <h3 id="compiling-from-source">Compiling from source</h3>
@@ -79,21 +79,21 @@ file. The properties are exposed in the global <code>folktale.monads.Either</cod
 <p>If you want to compile this library from the source, you'll need <a href="http://git-scm.com/">Git</a>,
 <a href="http://www.gnu.org/software/make/">Make</a>, <a href="http://nodejs.org/">Node.js</a>, and run the following commands:</p>
 
-<pre><code>$ git clone git://github.com/folktale/monads.either.git
-$ cd monads.either
+<pre><code>$ git clone git://github.com/folktale/data.either.git
+$ cd data.either
 $ npm install
 $ make bundle
 </code></pre>
 
-<p>This will generate the <code>dist/monads.either.umd.js</code> file, which you can load in
+<p>This will generate the <code>dist/data.either.umd.js</code> file, which you can load in
 any JavaScript environment.</p>
 
 <h2 id="documentation">Documentation</h2>
 
-<p>You can <a href="http://folktale.github.io/monads.either">read the documentation online</a> or build it yourself:</p>
+<p>You can <a href="http://folktale.github.io/data.either">read the documentation online</a> or build it yourself:</p>
 
-<pre><code>$ git clone git://github.com/folktale/monads.either.git
-$ cd monads.either
+<pre><code>$ git clone git://github.com/folktale/data.either.git
+$ cd data.either
 $ npm install
 $ make documentation
 </code></pre>
@@ -109,6 +109,10 @@ platforms by the use of shims. Just include <a href="https://github.com/kriskowa
 
 <p>Copyright (c) 2013 Quildreen Motta.</p>
 
-<p>Released under the <a href="https://github.com/folktale/monads.either/blob/master/LICENCE">MIT licence</a>.</p>
+<p>Released under the <a href="https://github.com/folktale/data.either/blob/master/LICENCE">MIT licence</a>.</p>
 
-<!-- links --></div></div></div></div></body></html>
+<!-- links -->
+
+<!-- [release: https://github.com/folktale/data.either/releases/download/v$VERSION/data.either-$VERSION.tar.gz] -->
+
+<!-- [/release] --></div></div></div></div></body></html>
